--- a/package.json
+++ b/package.json
@@ -1,1 +1,26 @@
-{"name":"vacation-dest-be","version":"1.0.0","description":"","main":"index.js","scripts":{"start":"node index.js"},"keywords":[],"author":"","license":"ISC","type":"module","dependencies":{"cors":"^2.8.5","express":"^4.18.1"}}
+{
+  "name": "vacation-dest-be",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "type": "module",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.18.1"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ruanek/vacation-destination-BE.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ruanek/vacation-destination-BE/issues"
+  },
+  "homepage": "https://github.com/ruanek/vacation-destination-BE#readme",
+  "description": ""
+}
