--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "node-fetch": "^3.2.9"
   },
   "repository": {
     "type": "git",
