--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "node-fetch": "^3.2.9"
+    "node-fetch": "^3.2.9",
+    "uniquid": "^1.1.4"
   },
   "repository": {
     "type": "git",
